-Vylepšení přehlednosti UI a přidání funkcí pro správu událostí -Aktualizovány soubory Login.cshtml a Register.cshtml pro přidání popisných štítků k formulářovým polím, což zlepšuje přehlednost a přístupnost pro uživatele. -Modifikován soubor Details.cshtml přidáním nové kolonky pro "Předmět pojištění" a tlačítka pro vytváření pojišťovacích událostí. -Vylepšení souboru Index.cshtml: -Nová sekce pro autentizované uživatele s rolí "Pojistenec". -Detailní tabulka pro zobrazení pojišťovacích událostí. -Vylepšené rozložení pro zobrazení statistik a počtů klientů. -Refaktorizace "Seznam všech událostí" pro lepší čitelnost a přidání kontrol pro hodnoty null. -Odstranění nadbytečných sekcí v Index.cshtml pro zjednodušení rozložení a zlepšení údržby.

--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -26,14 +26,14 @@
             <div class="row">
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.FirstName" class="control-label"></label>
+                        <label asp-for="Input.FirstName" class="control-label">Jméno</label>
                         <input asp-for="Input.FirstName" class="form-control" placeholder="Zadejte své jméno" />
                         <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.LastName" class="control-label"></label>
+                        <label asp-for="Input.LastName" class="control-label">Přijmení</label>
                         <input asp-for="Input.LastName" class="form-control" placeholder="Zadejte své příjmení" />
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
@@ -43,14 +43,14 @@
             <div class="row">
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.Email" class="control-label"></label>
+                        <label asp-for="Input.Email" class="control-label">E-mail</label>
                         <input asp-for="Input.Email" class="form-control" placeholder="email@domena.cz" />
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.DatumNarozeni" class="control-label"></label>
+                        <label asp-for="Input.DatumNarozeni" class="control-label">Datum narození</label>
                         <input asp-for="Input.DatumNarozeni" type="date" class="form-control" />
                         <span asp-validation-for="Input.DatumNarozeni" class="text-danger"></span>
                     </div>
@@ -60,14 +60,14 @@
             <div class="row">
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.UliceCpCe" class="control-label"></label>
+                        <label asp-for="Input.UliceCpCe" class="control-label">Ulice Čp/Če</label>
                         <input asp-for="Input.UliceCpCe" class="form-control" placeholder="Např. Sokolská 12" />
                         <span asp-validation-for="Input.UliceCpCe" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.Mesto" class="control-label"></label>
+                        <label asp-for="Input.Mesto" class="control-label">Město</label>
                         <input asp-for="Input.Mesto" class="form-control" placeholder="Např. Ostrava" />
                         <span asp-validation-for="Input.Mesto" class="text-danger"></span>
                     </div>
@@ -77,14 +77,14 @@
             <div class="row">
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.PSC" class="control-label"></label>
+                        <label asp-for="Input.PSC" class="control-label">PSČ</label>
                         <input asp-for="Input.PSC" class="form-control" placeholder="Např. 74723" />
                         <span asp-validation-for="Input.PSC" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.Stat" class="control-label"></label>
+                        <label asp-for="Input.Stat" class="control-label">Stát</label>
                         <input asp-for="Input.Stat" class="form-control" placeholder="Např. Česká republika" />
                         <span asp-validation-for="Input.Stat" class="text-danger"></span>
                     </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.Password" class="control-label"></label>
+                        <label asp-for="Input.Password" class="control-label">Heslo</label>
                         <input asp-for="Input.Password" type="password" class="form-control" placeholder="Zvolte heslo" />
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
@@ -111,7 +111,7 @@
             <div class="row mb-3">
                 <div class="col-md-6 mb-2">
                     <div class="form-group">
-                        <label asp-for="Input.ConfirmPassword" class="control-label"></label>
+                        <label asp-for="Input.ConfirmPassword" class="control-label">Kontrola hesla</label>
                         <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Potvrďte heslo" />
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
