--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -35,18 +35,18 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
                             <div class="mb-2">
-                                <label asp-for="Input.Email" class="form-label"></label>
+                                <label asp-for="Input.Email" class="form-label">E-mail</label>
                                 <input asp-for="Input.Email" class="form-control" placeholder="email@domena.cz" />
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
                             <div class="mb-2">
-                                <label asp-for="Input.Password" class="form-label"></label>
+                                <label asp-for="Input.Password" class="form-label">Heslo</label>
                                 <input asp-for="Input.Password" type="password" class="form-control" placeholder="Zadejte heslo" />
                                 <span asp-validation-for="Input.Password" class="text-danger"></span>
                             </div>
                             <div class="form-check mb-3">
                                 <input asp-for="Input.RememberMe" class="form-check-input" />
-                                <label asp-for="Input.RememberMe" class="form-check-label"></label>
+                                <label asp-for="Input.RememberMe" class="form-check-label">Zapamatuj si mě?</label>
                             </div>
 
                             <div class="text-center mb-3">
