Zlepšit responzivitu a přístupnost UI
- Aktualizovány `Login.cshtml` a `Index.cshtml` pro lepší rozvržení a rozestupy, včetně responzivních tříd a podmíněné logiky pro uživatelskou zpětnou vazbu.
- Vylepšen `_Layout.cshtml` o prvky přístupnosti (např. odkaz „Přeskočit na obsah“, atributy `aria-current`) a dynamické aktualizace patičky.
- Refaktorována struktura navigace pro lepší zarovnání.

- Upraven `site.css` na použití flexboxu pro konzistentní rozvržení, přidány responzivní velikosti písma a vylepšeny styly focusu.
- Znovu zavedeny styly hover/active pro odkazy v navigaci a upraveno zarovnání textu placeholderů.
- Tyto změny dohromady zlepšují uživatelskou zkušenost, udržovatelnost a čitelnost.

--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-        <div class="mt-5">
+        <div class="text-md-start text-center mt-md-5 mt-3 mb-md-5 mb-3">
             <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Zpět na domovskou</a>
         </div>
 
