--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -24,8 +24,8 @@
         </h3>
     </header>
 
-    <div class="p-4 mb-4 bg-body-tertiary rounded-3 border bg-light shadow-lg">
-        <div class="container-fluid py-4">
+    <div class="p-4 mb-3 bg-body-tertiary rounded-3 border bg-light shadow-lg">
+        <div class="container-fluid p-3">
             <h3 class="display-4 fw-bold">Evidence Pojisteni Web.cz</h3>
 
             <p class="col-md-8 fs-6 fw-bold">
@@ -36,41 +36,63 @@
 
             @if (SignInManager.IsSignedIn(User))
             {
-                <a class="btn btn-success btn-lg" type="button" asp-controller="Pojistenec" asp-action="Index">Vsupte do portálu</a>
+                <a class="btn btn-success" type="button" asp-controller="Pojistenec" asp-action="Index">
+                    Vsupte do portálu
+                </a>
             }
             else
             {
-                <a class="btn btn-success text-light @(ViewContext.RouteData.Values["page"]?.ToString()
-                            ==
-                        "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">
-                    Zaregistrujte se
-                </a>
+                <div class="col">
+                    <a class="btn btn-success mb-2 mb-md-0 text-light @(ViewContext.RouteData.Values["page"]?.ToString()
+                                ==
+                            "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">
+                        Zaregistrujte se
+                    </a>
 
-                <a class="btn btn-success text-light @(ViewContext.RouteData.Values["page"]?.ToString()
-                            ==
-                        "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">
-                    Přihlaste se
+                    <a class="btn btn-success mb-2 mb-md-0 text-light @(ViewContext.RouteData.Values["page"]?.ToString()
+                                ==
+                            "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">
+                        Přihlaste se
                 </a>
+                </div>
             }
         </div>
     </div>
 
-    <div class="row align-items-md-stretch">
-        <div class="col-md-6">
+    <div class="row px-0 align-items-md-stretch">
+        
+        <div class="col-md-6 mb-3 mb-md-0">
             <div class="h-100 p-4 text-bg-success rounded-3 shadow-lg">
                 <h2>Pojištění</h2>
                 <p>Stačí kliknout a podívat se v rychlém přehledu jaké možnosti tyto stránky nabízejí.</p>
                 <a class="btn btn-outline-light" type="button" asp-controller="Pojisteni" asp-action="Index">Podívat se na pojištění</a>
             </div>
         </div>
-        <div class="col-md-6">
+
+        <div class="col-md-6 mb-3 mb-md-0">
             <div class="h-100 p-4 bg-body-tertiary border rounded-3 bg-light shadow-lg">
                 <h2>Přihlášení na naše stránky</h2>
+
                 <p>
                     Přihlášení na stránky Evidence pojištění Vás posune blíž k jistějším zítřkům. S námi se můžete cítit ve větším
                     bezpečí a plně se soustředit na prožívání života.
                 </p>
-                <a class="btn btn-success" type="button" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
+
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <a class="btn btn-success disabled" type="button" asp-controller="Pojistenec" asp-action="Index"
+                            aria-disabled="true" tabindex="-1">
+                        Přihlášen
+                    </a>
+                }
+                else
+                {
+                    <a class="btn btn-success text-light @(ViewContext.RouteData.Values["page"]?.ToString()
+                                ==
+                            "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">
+                        Přihlaste se
+                    </a>
+                }
             </div>
         </div>
     </div>
