--- a/EvidencePojisteniWeb/wwwroot/css/site.css
+++ b/EvidencePojisteniWeb/wwwroot/css/site.css
@@ -1,31 +1,73 @@
+
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    height: 100%;
+}
+
+@media (max-width: 992px) {
+    .nav-underline .nav-link:hover,
+    .nav-underline .nav-link.active {
+        border-bottom: 2px solid #0d6efd;
+        color: yellowgreen !important;
+    }
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 15px;
-  }
+    html {
+        font-size: 15px;
+    }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 body {
-  margin-bottom: 60px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
+main {
+    flex: 1 0 auto; 
 }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+.footer-fixed {
+    margin-top: .5rem;
+}
+
+footer {
+    flex-shrink: 0;
+}
+
+.footer-fixed .container {
+    display: flex;
+    align-items: center;
+    min-height: 40px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.form-floating > .form-control-plaintext::placeholder,
+.form-floating > .form-control::placeholder {
+    color: var(--bs-secondary-color);
+    text-align: end;
+}
+
+.form-floating > .form-control-plaintext:focus::placeholder,
+.form-floating > .form-control:focus::placeholder {
+    text-align: start;
+}
+
+.nav-underline .nav-link:hover,
+.nav-underline .nav-link.active {
+    border-bottom: 2px solid #0d6efd;
+    color: yellowgreen !important;
 }
