Vylepšená manipulace s výčty, dotazy a bezpečnost proti hodnotám null
Vylepšen soubor `PojistnaUdalostController.cs` o pomocník `EnumDisplay` pro lepší zobrazované názvy výčtů a přidána funkce `AsNoTracking()` do dotazů pro zlepšení výkonu. Vylepšena logika počítání klientů a zajištěno bezpečné zpracování ověřených uživatelů a souvisejících dat pro hodnoty null.

Aktualizován soubor `Details.cshtml` pro opravu akce tlačítka „Vytvořit pojistnou událost“. Vylepšen soubor `Index.cshtml` o diagnostickou sekci pro ladění a vylepšené bezpečné zpracování a formátování podrobností událostí pro hodnoty null.

Tyto změny zlepšují kvalitu kódu, výkon a uživatelskou zkušenost.

--- a/EvidencePojisteniWeb/Views/Pojistenec/Details.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Details.cshtml
@@ -76,7 +76,7 @@
         <a asp-controller="PojisteniOsoby" asp-action="Create" asp-route-pojistenecId="@Model.Id" class="btn btn-primary">Přidat pojištění</a>
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editovat pojištěnce</a>
         <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Odstranit pojištěnce</a>
-        <a asp-controller="PojistnaUdalost" asp-action="Index" asp-route-pojistenecId="@Model.Id" class="btn btn-secondary">Vytvořit pojistnou událost</a>
+        <a asp-controller="PojistnaUdalost" asp-action="Create" asp-route-pojistenecId="@Model.Id" class="btn btn-secondary">Vytvořit pojistnou událost</a>
     </div>
 
     <div class="mt-5">
