--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -13,8 +13,10 @@
     </header>
 
     <div class="container mt-4 text-white bg-success p-4 rounded-3">
+
         @*Vložení validace ValidationSummary*@ 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <form asp-action="Create">
             @Html.AntiForgeryToken()
 
@@ -68,12 +70,17 @@
             </div>
 
             <div class="mt-4 text-center">
-                <button type="submit" value="Uložit pojištění" class="btn btn-outline-light">Uložit pojištění</button>
+                <button type="submit" value="Uložit pojištění" class="btn btn-outline-light">
+                    Uložit pojištění
+                </button>
             </div>
         </form>
     </div>
+
     <div class="mt-5">
-        <a class="btn btn-outline-secondary" asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">Zpět na přehled</a>
+        <a class="btn btn-outline-secondary" asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">
+            Zpět na přehled
+        </a>
     </div>
 </div>
 
